changed some details

--- a/FINAL_DOT_NET/Views/Shared/_Layout.cshtml
+++ b/FINAL_DOT_NET/Views/Shared/_Layout.cshtml
@@ -10,9 +10,9 @@
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/site.css" />
 </head>
-<body>
-    <header>
-        <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
+<body style="background-color:#1c2332">
+    <header >
+        <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-info border-bottom box-shadow mb-3">
             <div class="container">
                 <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">FINAL PROJECT</a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".navbar-collapse" aria-controls="navbarSupportedContent"
@@ -45,7 +45,7 @@
         </main>
     </div>
 
-    <footer class="border-top footer text-muted">
+    <footer class="border-top bg-dark footer text-muted" style="color: #161c27">
         <div class="container">
             &copy; 2020 - FINAL PROJECT - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
         </div>
