--- a/FINAL_DOT_NET/Areas/Identity/Pages/Account/Login.cshtml
+++ b/FINAL_DOT_NET/Areas/Identity/Pages/Account/Login.cshtml
@@ -5,8 +5,8 @@
     ViewData["Title"] = "Log in";
 }
 
-<h1>@ViewData["Title"]</h1>
-<div class="row">
+<h1 style="color:white">@ViewData["Title"]</h1>
+<div class="row" style="color:white">
     <div class="col-md-4">
         <section>
             <form id="account" method="post">
@@ -48,7 +48,7 @@
             </form>
         </section>
     </div>
-    <div class="col-md-6 col-md-offset-2">
+    <div class="col-md-6 col-md-offset-2" style="color:white">
         <section>
             <h4>Use another service to log in.</h4>
             <hr />
