--- a/FINAL_DOT_NET/Areas/Identity/Pages/Account/Manage/ChangePassword.cshtml
+++ b/FINAL_DOT_NET/Areas/Identity/Pages/Account/Manage/ChangePassword.cshtml
@@ -5,9 +5,9 @@
     ViewData["ActivePage"] = ManageNavPages.ChangePassword;
 }
 
-<h4>@ViewData["Title"]</h4>
+<h4 style="color:white">@ViewData["Title"]</h4>
 <partial name="_StatusMessage" for="StatusMessage" />
-<div class="row">
+<div class="row" style="color:white">
     <div class="col-md-6">
         <form id="change-password-form" method="post">
             <div asp-validation-summary="All" class="text-danger"></div>
