--- a/FINAL_DOT_NET/Areas/Identity/Pages/Account/Manage/DeletePersonalData.cshtml
+++ b/FINAL_DOT_NET/Areas/Identity/Pages/Account/Manage/DeletePersonalData.cshtml
@@ -5,15 +5,15 @@
     ViewData["ActivePage"] = ManageNavPages.PersonalData;
 }
 
-<h4>@ViewData["Title"]</h4>
+<h4 style="color:white">@ViewData["Title"]</h4>
 
-<div class="alert alert-warning" role="alert">
+<div class="alert alert-danger" role="alert" >
     <p>
         <strong>Deleting this data will permanently remove your account, and this cannot be recovered.</strong>
     </p>
 </div>
 
-<div>
+<div style="color:white">
     <form id="delete-user" method="post" class="form-group">
         <div asp-validation-summary="All" class="text-danger"></div>
         @if (Model.RequirePassword)
