--- a/FINAL_DOT_NET/Areas/Identity/Pages/Account/Manage/Index.cshtml
+++ b/FINAL_DOT_NET/Areas/Identity/Pages/Account/Manage/Index.cshtml
@@ -5,9 +5,9 @@
     ViewData["ActivePage"] = ManageNavPages.Index;
 }
 
-<h4>@ViewData["Title"]</h4>
+<h4 style="color:white">@ViewData["Title"]</h4>
 <partial name="_StatusMessage" model="Model.StatusMessage" />
-<div class="row">
+<div class="row" style="color:white">
     <div class="col-md-6">
         <form id="profile-form" method="post">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
