--- a/FINAL_DOT_NET/Views/Role/Create.cshtml
+++ b/FINAL_DOT_NET/Views/Role/Create.cshtml
@@ -3,9 +3,9 @@
 @{
     ViewData["Title"] = "Create";
 }
-<h1>Create Role</h1>
+<h1 style="color:white">Create Role</h1>
 <hr />
-<div class="row">
+<div class="row" style="color:white">
     <div class="col-md-4">
         <form asp-action="Create">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
@@ -20,8 +20,8 @@
         </form>
     </div>
 </div>
-<div>
-    <a asp-action="Index">Back to List</a>
+<div style="color:white">
+    <a asp-action="Index" >Back to List</a>
 </div>
 @section Scripts {
     @{await Html.RenderPartialAsync("_ValidationScriptsPartial");
