--- a/FINAL_DOT_NET/Views/Role/Index.cshtml
+++ b/FINAL_DOT_NET/Views/Role/Index.cshtml
@@ -3,9 +3,9 @@
     ViewData["Title"] = "Index";
 }
 
-<h1>List of Roles</h1>
+<h1 style="color:white">List of Roles</h1>
 <a asp-action="Create">Create</a>
-<table class="table table-striped table-bordered">
+<table class="table table-striped table-bordered" style="color:white">
     <thead>
         <tr>
             <td>Id</td>
